logs/agx.transform.uml2fs.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/agx'...
Listing './lib/python3.5/site-packages/agx/core'...
Compiling './lib/python3.5/site-packages/agx/core/_api.py'...
***   File "./lib/python3.5/site-packages/agx/core/_api.py", line 99
    raise ValueError, 'Broken dependency chain.'
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/agx/core/main.py'...
***   File "./lib/python3.5/site-packages/agx/core/main.py", line 81
    print '%s %s' % (profile[0], profile[1])
                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/agx/core/metaconfigure.py'...
***   File "./lib/python3.5/site-packages/agx/core/metaconfigure.py", line 32
    except ComponentLookupError, e:
                               ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/agx/core/testing'...
Compiling './lib/python3.5/site-packages/agx/core/testing/mock.py'...
***   File "./lib/python3.5/site-packages/agx/core/testing/mock.py", line 54
    print '``__call__()`` of %s' % '.'.join(self.path)
                               ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/agx/transform'...
Listing './lib/python3.5/site-packages/agx/transform/uml2fs'...
Listing './lib/python3.5/site-packages/agx.core-1.0a2.egg-info'...
Listing './lib/python3.5/site-packages/agx.transform.uml2fs-1.0a1.egg-info'...
Listing './lib/python3.5/site-packages/node'...
Listing './lib/python3.5/site-packages/node/behaviors'...
Listing './lib/python3.5/site-packages/node/ext'...
Listing './lib/python3.5/site-packages/node/ext/directory'...
Listing './lib/python3.5/site-packages/node/testing'...
Listing './lib/python3.5/site-packages/node/tests'...
Listing './lib/python3.5/site-packages/node-0.9.22.egg-info'...
Listing './lib/python3.5/site-packages/node.ext.directory-0.7.egg-info'...
Listing './lib/python3.5/site-packages/odict'...
Listing './lib/python3.5/site-packages/odict-1.6.2.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/plumber'...
Listing './lib/python3.5/site-packages/plumber/tests'...
Listing './lib/python3.5/site-packages/plumber-1.5.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/zope'...
Listing './lib/python3.5/site-packages/zope/component'...
Listing './lib/python3.5/site-packages/zope/component/testfiles'...
Listing './lib/python3.5/site-packages/zope/component/tests'...
Listing './lib/python3.5/site-packages/zope/configuration'...
Listing './lib/python3.5/site-packages/zope/configuration/tests'...
Listing './lib/python3.5/site-packages/zope/configuration/tests/excludedemo'...
Listing './lib/python3.5/site-packages/zope/configuration/tests/excludedemo/sub'...
Listing './lib/python3.5/site-packages/zope/configuration/tests/samplepackage'...
Listing './lib/python3.5/site-packages/zope/deprecation'...
Listing './lib/python3.5/site-packages/zope/event'...
Listing './lib/python3.5/site-packages/zope/i18nmessageid'...
Listing './lib/python3.5/site-packages/zope/interface'...
Listing './lib/python3.5/site-packages/zope/interface/common'...
Listing './lib/python3.5/site-packages/zope/interface/common/tests'...
Listing './lib/python3.5/site-packages/zope/interface/tests'...
Listing './lib/python3.5/site-packages/zope/lifecycleevent'...
Listing './lib/python3.5/site-packages/zope/schema'...
Listing './lib/python3.5/site-packages/zope/schema/tests'...
Listing './lib/python3.5/site-packages/zope.component-4.4.1.dist-info'...
Listing './lib/python3.5/site-packages/zope.configuration-4.1.0.dist-info'...
Listing './lib/python3.5/site-packages/zope.deprecation-4.3.0.dist-info'...
Listing './lib/python3.5/site-packages/zope.event-4.3.0.dist-info'...
Listing './lib/python3.5/site-packages/zope.i18nmessageid-4.1.0.dist-info'...
Listing './lib/python3.5/site-packages/zope.interface-4.4.3.dist-info'...
Listing './lib/python3.5/site-packages/zope.lifecycleevent-4.2.0.dist-info'...
Listing './lib/python3.5/site-packages/zope.schema-4.5.0.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
